--- a/Code/Antibody_Vgenes/final_correlation.Rmd
+++ b/Code/Antibody_Vgenes/final_correlation.Rmd
@@ -167,9 +167,11 @@ output_sum <- function(output, genelist){
   # genelist: "RNAseq" or "MiSeq"
   # a list of two sublist
   clinical = output[[1]]$clinical
+  clinical = gsub("\n", "_", clinical, fixed=T)
   # find a good file name
   para_name = paste(unlist(strsplit(clinical, " ", fixed = T ))[1:3], collapse = "_")
   para_name1 = gsub("/", "_", para_name, fixed=T)
+  
   size = output[[1]]$size
   hivstatus = output[[2]]
   input = output[[1]]$results
